--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=climate
-server.port=8080
+server.port=8082
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.password=010802
-spring.datasource.username=postgres
+spring.datasource.username=seyrelf
 spring.datasource.url=jdbc:postgresql://localhost:5432/climate
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
