--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=climate
-server.port=8080
+server.port=443
+server.ssl.key-store = keystore.p12
+server.ssl.key-store-password = 010802
+server.ssl.keyStoreType = PKCS12
+server.ssl.keyAlias = tomcat
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.password=010802
 spring.datasource.username=seyrelf
